# nucpot-autovc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  migrate_to_supabase.py  pyproject.toml
docs/: phase2-plan.md
src/autovc/: __main__.py  config.py  database.py  main.py  models.py  schemas.py  supabase_client.py  supabase_db.py
src/autovc/api/: routes.py
src/autovc/core/: calculator.py  grading.py  properties.py  templates.py
src/autovc/reference/: cache_query.py  data.py  db_migrate.py  gap_analyzer.py  mp_adapter.py  property_mapping.py  write_ref_value.py
src/autovc/reference/adapters/: nfmd.py  ontology.py  wiki.py
src/autovc/reference/data/: property-mapping.json
src/autovc/runners/: lammps_runner.py  lammps_runner.py.bak
src/autovc/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_api.py  test_calculator.py  test_e2e.py  test_grading.py  test_integration.py  test_kim_integration.py  test_models.py  test_phase2_api.py  test_phase2_properties.py  test_properties.py  test_reference_data.py  test_schemas.py  test_supabase_lammps.py  test_templates.py  test_workers.py
tests/reference/: __init__.py  test_adapter_nfmd.py  test_adapter_ontology.py  test_adapter_wiki.py  test_cache_query.py  test_db_migrate.py  test_gap_analyzer.py  test_mp_adapter.py  test_property_mapping.py  test_write_ref_value.py
uploads/: U_MTP.mtp
