[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucpot-autovc"
version = "0.1.0"
description = "NucPot Automated Verification System - Phase 1"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "celery[redis]>=5.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # "kimpy>=0.1",  # requires libkim-api system package
    "ase>=3.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=4.1",
]

[project.scripts]
autovc-api = "autovc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
