[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucpot-autovc"
version = "0.1.0"
description = "NucPot AutoVC Phase 1"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110","uvicorn[standard]>=0.29","sqlalchemy>=2.0","celery[redis]>=5.3","pydantic>=2.6","pydantic-settings>=2.2","ase>=3.22","mp-api>=0.46.0","httpx>=0.27","psycopg2-binary>=2.9"]

[project.optional-dependencies]
dev = ["pytest>=8.0","httpx>=0.27","psycopg2-binary>=2.9","pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
